--- a/pages/bank.html
+++ b/pages/bank.html
@@ -22,13 +22,13 @@
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 		  <ul class="navbar-nav me-auto mb-2 mb-md-0">
 			<li class="nav-item">
-			  <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+			  <a class="nav-link active" href="../index.html">Home</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link" href="about.html">About</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="bank.html">Bank</a>
+			  <a class="nav-link" aria-current="page" href="bank.html">Bank</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link" href="checking.html">Checking</a>
