--- a/pages/checking.html
+++ b/pages/checking.html
@@ -22,7 +22,7 @@
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 		  <ul class="navbar-nav me-auto mb-2 mb-md-0">
 			<li class="nav-item">
-			  <a class="nav-link active" href="../index.html">Home</a>
+			  <a class="nav-link" href="../index.html">Home</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link" href="about.html">About</a>
@@ -31,7 +31,7 @@
 			  <a class="nav-link" href="bank.html">Bank</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" aria-current="page" href="checking.html">Checking</a>
+			  <a class="nav-link active" aria-current="page" href="checking.html">Checking</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link disabled" href="#">Savings</a>
