--- a/index.html
+++ b/index.html
@@ -28,25 +28,22 @@
 			  <a class="nav-link" href="pages/about.html">About</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="pages/bank.html">Bank</a>
+			  <a class="nav-link" href="pages/pricing.html">Pricing</a>
 			</li>
-			<li class="nav-item">
-			  <a class="nav-link" href="pages/checking.html">Checking</a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link disabled" href="#">Savings</a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link disabled" href="#">Certificate</a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link disabled" href="#">Traditional IRA</a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link disabled" href="#">Roth IRA</a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link disabled" href="#">401(k)</a>
+			<!-- Learn Dropdown -->
+			<li class="nav-item dropdown">
+			  <a class="nav-link dropdown-toggle" href="#" id="navbarLearn" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+				Learn
+			  </a>
+			  <ul class="dropdown-menu" aria-labelledby="navbarLearn">
+				<li><a class="dropdown-item" href="pages/bank.html">What is a Bank?</a></li>
+				<li><a class="dropdown-item" href="pages/checking.html">What is a Checking Account?</a></li>
+				<li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">What is a Savings Account?</a></li>
+				<li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">What is a Certificate Account?</a></li>
+				<li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">What is a Traditional IRA?</a></li>
+				<li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">What is a Roth IRA?</a></li>
+				<li><a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">What is a 401(k)?</a></li>
+			  </ul>
 			</li>
 		  </ul>
 		</div>
@@ -55,8 +52,6 @@
 	<!-- End Navigation -->
 
 
-	
-	
 	<!-- Main Content -->
 	<div class="container col-xl-10 col-xl-6 px-4 pt-5">
 		<div class="row align-items-center g-lg-5 py-5">
@@ -71,33 +66,37 @@
 			</div>
 
 			<div class="col-md-10 mx-auto col-lg-5">
-				<form class="p-4 p-md-5 border rounded-3 bg-light">
-					<div class="form-floating mb-3">
-						<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-						<label for="floatingInput">User Name</label>
-					</div>
-					<div class="form-floating mb-3">
-						<input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-						<label for="floatingPassword">Password</label>
-					</div>
-					<div class="checkbox mb-3">
-						<label>
-							<input type="checkbox" value="remember-me"> Remember me
-						</label>
-					</div>
-					<button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-					<hr class="my-4">
-					<small class="text-muted">By clicking Sign in, you agree to the terms of use.</small>
+			  <form class="p-4 p-md-5 border rounded-3 bg-light" onsubmit="return checkLogin();">
+				<div class="form-floating mb-3">
+				  <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+				  <label for="floatingInput">User Name</label>
+				</div>
+				<div class="form-floating mb-3">
+				  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+				  <label for="floatingPassword">Password</label>
+				</div>
 
-					<!-- Add Sign Up/Subscribe Button for Users without an Account -->
-					<div class="mt-3 text-center">
-						<p>Don't have an account?</p>
-						<button class="w-100 btn btn-lg btn-outline-primary" type="button" onclick="window.location.href='pages/signup.html'">Subscribe</button>
-					</div>
-				</form>
+				<!-- Error message with icon, hidden by default -->				
+				<div id="error-message" class="alert alert-danger mb-3" style="display: none;">
+					<span>Incorrect username or password.</span>
+				</div>
+
+				<div class="checkbox mb-3">
+				  <label>
+					<input type="checkbox" value="remember-me"> Remember me
+				  </label>
+				</div>
+				<button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+				<hr class="my-4">
+				<small class="text-muted">By clicking Sign in, you agree to the terms of use.</small>
+
+				<!-- Add Sign Up/Subscribe Button for Users without an Account -->
+				<div class="mt-3 text-center">
+				  <p>Don't have an account?</p>
+				  <button class="w-100 btn btn-lg btn-outline-primary" type="button" onclick="window.location.href='pages/signup.html'">Subscribe</button>
+				</div>
+			  </form>
 			</div>
-
-
 		</div>
 	</div>
 
@@ -192,6 +191,19 @@
 		</div>
 	</div>
 	
+	<hr>
+	<div class="container px-4 mt-5" id="featured-3">
+		<h2 class="pb-2">Understanding Payments</h2>
+		<p class="pb-5 border-bottom">
+			Every time you buy something, you’re making a payment, but did you know there are many ways to pay? From cash to credit cards, each method has its own advantages and disadvantages.  Let's compare varios payment methods!
+		</p>
+		<div class="container-fluid p-0 text-center">
+			<img src="img/payments.png" alt="Descriptive Alt Text" class="img-fluid w-75 mx-auto">
+		</div>
+	</div>
+	
+
+	
 	<hr class="mb-0">
 	
 	<!-- Footer -->
@@ -204,5 +216,20 @@
     <!-- Include Bootstrap JS and Popper.js from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script>
+	  function checkLogin() {
+		const username = document.getElementById('floatingInput').value;
+		const password = document.getElementById('floatingPassword').value;
+
+		// Check if the username and password are correct
+		if (username === 'jdoe' && password === 'password') {
+		  window.location.href = 'pages/dashboard.html';  // Redirect to dashboard
+		  return false;  // Prevent form submission
+		} else {
+		  document.getElementById('error-message').style.display = 'block';  // Show error message
+		  return false;  // Prevent form submission
+		}
+	  }
+	</script>
 </body>
 </html>
